# pasty

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_STATUS.md  README.md
.claude/: settings.local.json
.github/workflows/: release-macos-dmg.yml
.opencode/commands/: speckit.plan.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
core/: ARCHITECTURE.md  CMakeLists.txt  Cargo.toml  cbindgen.toml
core/docs/: cloud-drive-sync-protocol.md  cloud-sync-origin.md
core/include/: ClipboardHistory.h  ClipboardHistoryStore.h  ClipboardHistoryTypes.h  Pasty.h  module.modulemap
core/include/pasty/: logger.h  module.modulemap  pasty.h  runtime_json_api.h
core/include/pasty/api/: history_api.h  runtime_json_api.h
core/include/pasty/common/: logger.h
core/include/pasty/history/: clipboard_history_types.h  clipboard_types.h  history.h  store.h  types.h
core/include/pasty/runtime/: core_runtime.h  runtime_config.h
core/include/pasty/settings/: settings_api.h
core/migrations/: 0001-initial-schema.sql  0002-add-search-index.sql  0003-add-metadata.sql  0004-add-ocr-support.sql  0005-add-origin-tracking.sql  0006-add-pinned-field.sql  001_initial.down.sql  001_initial.up.sql
core/src/: ClipboardHistory.cpp  ClipboardHistoryStore.cpp  Pasty.cpp  lib.rs  logger.cpp  module.modulemap
core/src/api/: pasty.cpp  pasty.h  runtime_json_api.cpp  runtime_json_api.h
core/src/application/history/: clipboard_service.cpp  clipboard_service.h
core/src/common/: logger.cpp  logger.h
core/src/ffi/: clipboard.rs  exports.rs  mod.rs  types.rs
core/src/history/: clipboard_history_store.h  clipboard_history_types.h  history.cpp  history.h  store.h  store_sqlite.cpp
core/src/infrastructure/crypto/: encryption_manager.cpp  encryption_manager.h
core/src/infrastructure/settings/: in_memory_settings_store.cpp  in_memory_settings_store.h
core/src/infrastructure/sync/: cloud_drive_sync_exporter.cpp  cloud_drive_sync_exporter.h  cloud_drive_sync_importer.cpp  cloud_drive_sync_importer.h  cloud_drive_sync_protocol_info.cpp  cloud_drive_sync_protocol_info.h  cloud_drive_sync_pruner.cpp  cloud_drive_sync_pruner.h  cloud_drive_sync_state.cpp  cloud_drive_sync_state.h
core/src/models/: clipboard_entry.rs  clipboard_history.rs  mod.rs
core/src/ports/: settings_store.h
core/src/runtime/: core_runtime.cpp  core_runtime.h
core/src/services/: clipboard_store.rs  database.rs  deduplication.rs  encryption.rs  mod.rs  storage.rs
core/src/settings/: settings_api.cpp
core/src/store/: sqlite_clipboard_history_store.cpp  sqlite_clipboard_history_store.h  store_sqlite.cpp  store_sqlite.h
core/src/utils/: metadata_utils.cpp  metadata_utils.h  runtime_json_utils.cpp  runtime_json_utils.h
core/tests/: CMakeLists.txt  clipboard_history_test.cpp  clipboard_store_test.rs  cloud_drive_sync_exporter_test.cpp  cloud_drive_sync_importer_test.cpp  cloud_drive_sync_state_test.cpp  cloud_drive_sync_test.cpp  crypto_sodium_link_test.cpp  database_test.rs  deduplication_test.rs  encryption_manager_test.cpp  error_handling_tests.rs  ffi_tests.rs  history_test.cpp  lib_tests.rs  logger_test.cpp  metadata_utils_test.cpp  model_tests.rs  retrieve_test.rs  settings_api_test.cpp  storage_test.rs  store_entry_test.rs
design-system/main-panel/: macOS-design-spec.md  v2-dark-mode.html
design-system/settings/: DESIGN.md  index.html
docs/: agents-development-flow.md  project-structure.md  review-cloud-sync.md  usage-examples.md
docs/ai-notepads/cloud-sync-gc/: decisions.md  issues.md  learnings.md
docs/ai-notepads/e2ee-cloud-sync/: decisions.md  learnings.md
macos/PastyApp/: Info.plist  Package.swift  PastyApp.entitlements  PastyApp_binary  build.sh  project.yml  run.sh
macos/PastyApp/PastyApp/: AppDelegate.swift  FFIBridge.swift  Info.plist  MenuBarManager.swift  main.swift
macos/PastyApp/PastyApp.xcodeproj/: project.pbxproj
macos/PastyApp/include/: module.modulemap
openspec/changes/clipboard-main-panel/: design.md  tasks.md
openspec/changes/image-ocr/: design.md  tasks.md
openspec/changes/implement-e2ee-cloud-drive-sync/: design.md  proposal.md  tasks.md
openspec/changes/logger-system/: tasks.md
openspec/changes/main-panel-control/: tasks.md
openspec/changes/main-panel-perf-improvements/: design.md  proposal.md  tasks.md
openspec/changes/path-refact/: proposal.md  tasks.md
openspec/changes/setting-opt/: tasks.md
openspec/changes/setting-panel/: tasks.md
openspec/changes/setting-ui/: proposal.md  tasks.md
openspec/changes/ui-refactor/: proposal.md  tasks.md
openspec/specs/core-logging-architecture/: spec.md
openspec/specs/design-system-core/: spec.md
openspec/specs/macos-feature-architecture/: spec.md
openspec/specs/path-management/: spec.md
openspec/specs/platform-logging-integration/: spec.md
platform/macos/: ARCHITECTURE.md  App.swift  HistoryItemViewModel.swift  HistoryViewController.swift  HistoryWindowController.swift  Info.plist  project.yml  project.yml.backup
scripts/: build-core.sh  build-macos.sh  build.sh  check-prereqs.sh  check-requirements.sh  common.sh  core-build.sh  core-test.sh  export-macos-dmg.sh  install-requirements.sh  package.sh  platform-build-android.sh  platform-build-ios.sh  platform-build-macos.sh  platform-build-windows.sh  run.sh  start-worktree.sh  test-core.sh  test-integration.sh
specs/001-clipboard-history/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rust-swift-framework/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-clipboard-history/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-clipboard-main-panel/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-clipboard-main-panel/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-clipboard-operations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/contract/: store_entry_test.rs
tests/integration/: test_swift_rust_ffi.swift
(+256 files in other folders)
